# csg-editor

./: .gitignore  AllInOneTool.cpp  AllInOneTool.h  CMakeLists.txt  CameraTool.cpp  CameraTool.h  DiskMenu.cpp  DiskMenu.h  MapViewer.cpp  MapViewer.h  MorphTool.cpp  MorphTool.h  MoveTool.cpp  MoveTool.h  README.md  RotateTool.cpp  RotateTool.h  ScaleTool.cpp  ScaleTool.h  SelectionTool.cpp  SelectionTool.h  Status.cpp  Status.h  Tool.cpp  Tool.h  colors.tga  dust_001.map  glad.c  move.tga  rotate.tga  scale.tga  test.map  transformation_menu_mockup.blend  transformation_menu_mockup.blend1  transformation_menu_mockup.blend2
include/glad/: glad.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-linuxDebug.mk  Makefile-linuxRelease.mk  Makefile-variables.mk  Makefile-win32Debug.mk  Makefile-win32Release.mk  Package-Debug.bash  Package-Release.bash  Package-linuxDebug.bash  Package-linuxRelease.bash  Package-win32Debug.bash  Package-win32Release.bash  configurations.xml  project.xml
nbproject/private/: Makefile-variables.mk  configurations.xml
